--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.10.0"
   },
   "dependencies": {
